; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_arm-tdep.c_arm_unwind_dummy_id.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_arm-tdep.c_arm_unwind_dummy_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gdbarch = type { i32 }
%struct.frame_info = type { i32 }
%struct.frame_id = type { i32 }

@ARM_SP_REGNUM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gdbarch*, %struct.frame_info*)* @arm_unwind_dummy_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arm_unwind_dummy_id(%struct.gdbarch* %0, %struct.frame_info* %1) #0 {
  %3 = alloca %struct.frame_id, align 4
  %4 = alloca %struct.gdbarch*, align 8
  %5 = alloca %struct.frame_info*, align 8
  store %struct.gdbarch* %0, %struct.gdbarch** %4, align 8
  store %struct.frame_info* %1, %struct.frame_info** %5, align 8
  %6 = load %struct.frame_info*, %struct.frame_info** %5, align 8
  %7 = load i32, i32* @ARM_SP_REGNUM, align 4
  %8 = call i32 @frame_unwind_register_unsigned(%struct.frame_info* %6, i32 %7)
  %9 = load %struct.frame_info*, %struct.frame_info** %5, align 8
  %10 = call i32 @frame_pc_unwind(%struct.frame_info* %9)
  %11 = call i32 @frame_id_build(i32 %8, i32 %10)
  %12 = getelementptr inbounds %struct.frame_id, %struct.frame_id* %3, i32 0, i32 0
  store i32 %11, i32* %12, align 4
  %13 = getelementptr inbounds %struct.frame_id, %struct.frame_id* %3, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  ret i32 %14
}

declare dso_local i32 @frame_id_build(i32, i32) #1

declare dso_local i32 @frame_unwind_register_unsigned(%struct.frame_info*, i32) #1

declare dso_local i32 @frame_pc_unwind(%struct.frame_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
